--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <div class="profile">
-      <img src="./images/400.jpg" alt="">
-      <h1>Hello Webpack 4</h1>
+      <!-- <img src="./images/400.jpg" alt=""> -->
+      <!-- <h1>Hello Webpack 4</h1> -->
       <div id="react-root"></div>
       <!-- <div id="app"></div> -->
     </div>
