--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
       <div id="react-root"></div>
       <!-- <div id="app"></div> -->
     </div>
-    <script src="/main-bundle.js"></script>
+    <!-- <script src="/main-bundle.js"></script> -->
   </body>
 </html>
